Icons at the correct size
- icons in export modal the correct size
- checkbox extra margin removed

--- a/src/style/sections/exports/exports.less
+++ b/src/style/sections/exports/exports.less
@@ -124,10 +124,10 @@
 }
 
 .exports-panel__layer-icon {
-    margin-top: 0.5rem;
+    margin-top: 0rem;
     svg {
-        width: 2.5rem;
-        height: 2.5rem;
+        width: 1.8rem;
+        height: 1.8rem;
         fill:  @item-active;
         stroke: none;
     }
