--- a/src/style/shared/button.less
+++ b/src/style/shared/button.less
@@ -228,6 +228,8 @@ button {
     }
     input[type=checkbox] {
         visibility: hidden;
+        margin: 0;
+        
         &:checked + label {
             background-color: @warm-gray;
         }
